@@ -40,11 +40,11 @@ When using TTX from the command line there are a bunch of extra options, these a
 <H3>The TTX file format</H3>
 
 The following tables are currently supported:
-<BR>
+<BLOCKQUOTE><TT>
 <!-- begin table list -->
 BASE, CFF, DSIG, GDEF, GPOS, GSUB, JSTF, LTSH, OS/2, TSI0, TSI1, TSI2, TSI3, TSI5, TSIB, TSID, TSIJ, TSIP, TSIS, TSIV, cmap, cvt, fpgm, gasp, glyf, hdmx, head, hhea, hmtx, kern, loca, maxp, name, post, prep, vhea and vmtx
 <!-- end table list -->
-<BR>
+</TT></BLOCKQUOTE>
 Other tables are dumped as hexadecimal data.
 
 <P>
@@ -88,8 +88,17 @@ Guido van Rossum, Andreas Seidel, Adam Twardoch.
 
 <H3>Copyrights</H3>
 
-FontTools/TTX -- 1999-2002 Just van Rossum; Letterror (just@letterror.com) 
-<BR>See LICENCE.txt for the full license.
+<A HREF="http://fonttools.sourceforge.net/">FontTools/TTX</A>
+<BR>1999-2002 Just van Rossum; LettError (just@letterror.com). See LICENCE.txt for the full license.
+<P>
+<A HREF="http://www.python.org/">Python</A>
+<BR>Copyright (c) 2001, 2002 Python Software Foundation. All Rights Reserved.
+<BR>Copyright (c) 2000 BeOpen.com. All Rights Reserved.
+<BR>Copyright (c) 1995-2001 Corporation for National Research Initiatives. All Rights Reserved.
+<BR>Copyright (c) 1991-1995 Stichting Mathematisch Centrum, Amsterdam. All Rights Reserved.
+<P>
+<A HREF="http://www.pfdubois.com/numpy/">Numeric Python (NumPy)</A>
+<BR>Copyright (c) 1996. The Regents of the University of California. All rights reserved.
 
 </BODY>
 </HTML>
