@@ -1,3 +1,8 @@
+TTX/FontTools Version 2.0 beta 2 (released ??? 2002)
+
+- Fixed bug in ClassDef format 1 subtable (Andreas Seidel bumped into
+  this one).
+
 TTX/FontTools Version 2.0 beta 1 (released September 10 2002)
 
 - Fixed embarrassing bug: the master checksum in the head table is now
